# Picture-management-website

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  package-lock.json  package.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  frontend-ci.yml
ai-service/: Dockerfile  README.md  environment.yml  requirements.txt
ai-service/app/: __init__.py  config.py  main.py
ai-service/app/routes/: __init__.py  health.py  search.py  tags.py
ai-service/app/services/: search_intent.py  tagging.py  tagging_types.py  vision_classifier.py
ai-service/tests/: conftest.py  test_health.py  test_search.py  test_tags.py
backend/: Dockerfile  pom.xml
docker/: docker-compose.dev.yml
docker/mysql/: init.sql
docker/nginx/: nginx.conf
docker/nginx/conf.d/: app.conf
docker/redis/: redis.conf
frontend/: .env.development  .eslintrc.cjs  .gitignore  Dockerfile  index.html  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.vue  env.d.ts  main.ts
frontend/src/components/: ImageEditDialog.vue
frontend/src/router/: index.ts
frontend/src/services/: aiService.ts  apiClient.ts  authService.ts  imageService.ts  tagService.ts
frontend/src/stores/: auth.ts  imageSearch.ts  imageTags.ts  imageUpload.ts
frontend/src/styles/: main.scss
frontend/src/types/: ai.ts  api.ts  auth.ts  image.ts  tag.ts
frontend/src/views/: AuthLogin.vue  AuthRegister.vue  DashboardHome.vue  (+2 more)
scripts/: setup-dev.sh
tools/mcp-image-search/: README.md  picture_mcp_server.py  pyproject.toml
(+121 files in other folders)
