[project]
name = "picture-mcp-image-search"
version = "0.1.0"
description = "Model Context Protocol server bridge for the Picture Management website"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Picture Management Team"}]
dependencies = [
    "anyio>=4.4",
    "httpx>=0.28",
    "mcp>=1.23",
    "python-dotenv>=1.0.1",
]

[project.scripts]
picture-mcp-image-search = "picture_mcp_server:main"
